# php-lsp

./: .gitignore  .gitmodules  AGENTS.md  DECISIONS.md  Makefile  PRD.md  README.md  TASKS.md  config-schema.json
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
.serena/memories/client/: core.md
.serena/memories/server/: core.md
client/: .vscodeignore  LICENSE  esbuild.mjs  language-configuration.json  package-lock.json  package.json  twig-language-configuration.json
client/scripts/: check-cache-path.mjs  check-commands.mjs  prepare-package-metadata.mjs
client/src/: cachePath.ts  extension.ts
docs/: architecture.md  cli-ci.md  configuration.md  lsp-features.md  performance.md  production-baseline.md  production-risk-register.md
scripts/: audit-lsp-workspace.py  benchmark-lsp-latency.py  benchmark-lsp-latency.sh  build-server.sh  bundle-stubs.sh  check-stubs.sh  profile-workspace.py  profile-workspace.sh  smoke-cli.sh  smoke-vsix.sh  test-goto-def.py  test-porting-request-type.py
scripts/examples/: run-cli-analyze-fixture.sh  run-cli-analyze-large-workspace.sh
server/: Cargo.toml
server/crates/php-lsp-completion/: Cargo.toml
server/crates/php-lsp-completion/src/: context.rs  lib.rs  provider.rs
server/crates/php-lsp-index/: Cargo.toml
server/crates/php-lsp-index/src/: cache.rs  composer.rs  lib.rs  stubs.rs  workspace.rs
server/crates/php-lsp-parser/: Cargo.toml
server/crates/php-lsp-parser/src/: cst.rs  diagnostics.rs  lib.rs  parser.rs  phpdoc.rs  references.rs  resolve.rs  return_type.rs  semantic.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  utf16.rs
server/crates/php-lsp-server/: Cargo.toml
server/crates/php-lsp-server/src/: analyze.rs  config.rs  fix.rs  framework.rs  lib.rs  main.rs  server.rs  server_tests.rs  template.rs
server/crates/php-lsp-server/src/indexing/: cache.rs  mod.rs  stubs.rs  vendor.rs  workspace.rs
server/crates/php-lsp-server/src/lsp/: code_action.rs  completion.rs  completion_helpers.rs  conversions.rs  definition.rs  diagnostics.rs  document_links.rs  document_symbols.rs  external_command.rs  folding.rs  formatting.rs  hierarchy.rs  hover.rs  inlay_hints.rs  lifecycle.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  templates.rs
server/crates/php-lsp-server/src/util/: lsp_text.rs  mod.rs  uri.rs
server/crates/php-lsp-server/tests/: e2e.rs  e2e_code_actions.rs  e2e_completion.rs  e2e_definition.rs  e2e_diagnostics.rs  e2e_formatting.rs  e2e_foundation.rs  e2e_hierarchy.rs  e2e_hover.rs  e2e_indexing.rs  e2e_initialize.rs  e2e_ranges.rs  e2e_references.rs  e2e_symbols.rs  e2e_templates.rs
server/crates/php-lsp-server/tests/support/: mod.rs
server/crates/php-lsp-types/: Cargo.toml
server/crates/php-lsp-types/src/: lib.rs  uri.rs
test-fixtures/basic/: Bar.php  Foo.php  hello.php
test-fixtures/basic/Test/: Baz.php
test-fixtures/composer-psr4/: composer.json
test-fixtures/composer-psr4/src/Service/: UserService.php
test-fixtures/lsp-cases/: README.md  composer.json
test-fixtures/lsp-cases/src/Diagnostics/: ArgumentCountMismatch.php  BuiltinNoFalsePositive.php  FrameworkNoFalsePositive.php  PromotedSelfDefaults.php  SemanticUnknowns.php
test-fixtures/lsp-cases/src/Lsp/: CompletionIncomplete.php  DocumentSymbols.php  HoverDefinition.php  ReferencesRename.php  ReferencesUnsupported.php  RenameDisallowed.php
test-fixtures/syntax-errors/: broken.php
test-fixtures/vendor-resolve/: composer.json
test-fixtures/vendor-resolve/src/: BaseHandler.php  ConcreteHandler.php  TimerService.php
test-fixtures/vendor-resolve/tests/: SampleTest.php
(+9 files in other folders)
