[package]
name = "php-lsp-completion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Completion engine for php-lsp"

[dependencies]
php-lsp-types = { workspace = true }
php-lsp-index = { workspace = true }
lsp-types = { workspace = true }
tracing = { workspace = true }
