[package]
name = "php-lsp-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Symbol index for php-lsp"

[dependencies]
php-lsp-types = { workspace = true }
php-lsp-parser = { workspace = true }
dashmap = { workspace = true }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
