[package]
name = "php-lsp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "PHP Language Server (LSP 3.17) written in Rust"

[lib]
name = "php_lsp_server"
path = "src/lib.rs"

[[bin]]
name = "php-lsp"
path = "src/main.rs"

[dependencies]
php-lsp-types = { workspace = true }
php-lsp-parser = { workspace = true }
php-lsp-index = { workspace = true }
php-lsp-completion = { workspace = true }
tower-lsp = { workspace = true }
lsp-types = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = "0.5"
futures = "0.3"
